<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/marron"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/outline_arrow_back_24"
            app:tint="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/connectez_vous"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="24dp"
            android:paddingTop="24dp"
            android:paddingEnd="24dp"
            android:paddingBottom="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="@string/identifiez_vous"
                android:textColor="@color/gris"
                android:textSize="18sp"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:drawableStart="@drawable/email"
                android:drawablePadding="16dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textColor="@color/gris"
                android:textColorHint="@color/gris" />

            <EditText
                android:id="@+id/et_mdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/lock"
                android:drawablePadding="16dp"
                android:hint="@string/mot_de_passe"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColor="@color/gris"
                android:textColorHint="@color/gris" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:background="@android:color/transparent"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:padding="0dp"
                android:text="@string/mot_de_passe_oublie"
                android:textColor="@color/blue2"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_login"
                android:onClick="register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:backgroundTint="@color/orange"
                android:text="@string/connectez_vousMAJ"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                app:cornerRadius="0dp"
                android:padding="15dp"
                android:layout_marginTop="15dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nouveau_sur_jumia"
                    android:textColor="@color/gris" />

                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:minHeight="0dp"
                    android:minWidth="0dp"
                    android:paddingStart="8dp"
                    android:text="@string/cree_un_compte"
                    android:textColor="@color/blue2"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:alpha="0.3"
                    android:background="@color/gris" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/ou"
                    android:textColor="@color/gris" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:alpha="0.3"
                    android:background="@color/gris" />
            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@android:color/white"
                android:drawableLeft="@drawable/facenbooook"
                android:drawablePadding="10dp"
                android:text="@string/connectez_vous_avec_facebook"
                android:textColor="@color/blue2"
                android:textStyle="bold"
                android:layout_marginTop="15dp"/>

        </LinearLayout>
</LinearLayout>